--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        
         <h1>Hello World!</h1>
+        <h3>User agent</h3>
+        <p id="userAgent"></p>
+        <script>
+            (function () {
+                var ua = window.navigator.userAgent;
+                var userAgent = document.getElementById('userAgent');
+                userAgent.innerText = userAgent;
+            })()
+        </script>
     </body>
 </html>
