--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             (function () {
                 var ua = window.navigator.userAgent;
                 var userAgent = document.getElementById('userAgent');
-                userAgent.innerText = userAgent;
+                userAgent.innerText = ua;
             })()
         </script>
     </body>
